[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["encoding"]
description = "Easily create multiple serializers for the same type"
homepage = "https://github.com/davidpdrsn/serializers"
keywords = ["serde_json", "json", "serializer"]
license = "MIT"
name = "serializers"
readme = "README.md"
repository = "https://github.com/davidpdrsn/serializers.git"
version = "0.2.3"
documentation = "https://docs.rs/serializers/"

[dependencies]
serde = "1.0.79"
serde_json = "1.0.31"

[dev-dependencies]
version-sync = "0.5"
